--- a/index.html
+++ b/index.html
@@ -1,33 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
-    <title>WebStudio</title>
-    <link rel="stylesheet" href="./CSS/style.css">
-</head>
-<body>
-    <header>
-        <img src="./images/WebStudio.svg" alt="WebStudio">
-        <nav>
-            <ul class="header-list">
-                <li><a class="link-list" href="">Студия</a></li>
-                <li><a class="link-list" href="">Портфолио</a></li>
-                <li><a class="link-list" href="">Контакты</a></li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-            </ul>
-        </nav>
-    </header>
-    <main>
+<html lang="ru">
 
-    </main>
-    <footer>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+        <title>WebStudio</title>
+        <link rel="stylesheet" href="./CSS/style.css">
+    </head>
 
-    </footer>
-</body>
+    <body>
+        <header>
+
+            <nav>
+                <a href="https://google.com"><img src="./images/WebStudio.svg" alt="Лого" width="145"></a>
+                <ul class="header-list">
+                    <li><a class="header-link" href="studio.html">Студия</a></li>
+                    <li><a class="header-link" href="portfolio.html">Портфолио</a></li>
+                    <li><a class="header-link" href="contacts.html">Контакты</a></li>
+                </ul>
+            </nav>
+            <a class = "header-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class = "header-link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        </header>
+
+        <main>
+            <section>
+                <ul class="main-list">
+                    <li class="main-link"><button type="button">Все</button></li>
+                    <li class="main-link"><button type="button">Веб-сайты</button></li>
+                    <li class="main-link"><button type="button">Приложения</button></li>
+                    <li class="main-link"><button type="button">Дизайн</button></li>
+                    <li class="main-link"><button type="button">Маркетинг</button></li>
+                </ul>
+            </section>
+            <section>
+                <ul class="main-content">
+                    <li>
+                        <a href="">
+                            <img src="./images/img.jpg" alt="0" width="370">
+                            <h2>Технокряк</h2>
+                            <p>Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                        <img src="./images/img (1).jpg" alt="1" width="370">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                        <img src="./images/img (2).jpg" alt="2" width="370">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                        <img src="./images/img (3).jpg" alt="3" width="370">
+                        <h2>Проект Prime</h2>
+                        <p>Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                        <img src="./images/img (4).jpg" alt="4" width="370">
+                        <h2>Проект Boxes</h2>
+                        <p>Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                        <img src="./images/img (5).jpg" alt="5" width="370">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/img (6).jpg" alt="6" width="370">
+                            <h2>Издание Limited Edition</h2>
+                            <p>Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/img (7).jpg" alt="7" width="370"> 
+                            <h2>Проект LAB</h2>
+                            <p>Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/img (8).jpg" alt="8" width="370">
+                            <h2>Growing Business</h2>
+                            <p>Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <a href="https://google.com"><img src="./images/WebStudio.svg" alt="Лого" width="145"></a>
+            <address>
+                г. Киев, пр-т Леси Украинки, 26 <br>
+                <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
+                <a class="footer-link" href="tel:+38 096 111 11 11">+38 096 111 11 11</a> 
+                
+            </address>
+        </footer>
+    </body>
+
 </html>
